# Walter

./: LICENSE  README.md  pyproject.toml  setup.py
tests/: test_startup.py  test_workflow.py
tests/data/: cities.geojson
walter/: __init__.py  cli.py  gui.py
walter/commands/: __init__.py  describe.py
walter/integrations/: __init__.py  agol.py  gitbook.py  llm.py
walter/integrations/templates/: gitbook_summary.md.j2
walter/utils/: gis.py  text.py
walter/walter/: __init__.py  cli.py
walter/walter/commands/: __init__.py  describe.py
walter/walter/utils/: __init__.py  gis.py
walter_gis.egg-info/: PKG-INFO  SOURCES.txt
